# pg-union-find-rs

./: BENCHMARKS.md  BENCHMARK_RESULTS.md  Cargo.toml  DESIGN.md  README.md  docker-compose.yml
.cursor/rules/: cargo-and-scripts.md
migrations/: 001_init.sql  002_add_is_identified.sql  003_delete_support.sql  004_union_find_deleted_at.sql  005_unique_person_id.sql  006_person_uuid_to_native_uuid.sql
src/: db.rs  handlers.rs  main.rs  models.rs
tests/: http_api.rs  integration.rs
tests/common/: mod.rs
